--- a/css/menu.css
+++ b/css/menu.css
@@ -1,63 +1,66 @@
 .menu-wrap{
-	position: fixed;
+	position: absolute;
 	top: 0;
-	left: 0;
-	z-index: 2;
-
+	/* left: 50%; */
+	/* z-index: 1; */
+	
 	/* display: inline;
     justify-content: center;
     align-items: center;
     text-align: center; */
 }
 
-.menu-wrap h2{
-	/* position: fixed; */
+h2{
+	position: relative;
 	/* font-family: 'Poppins', sans-serif; */
-	z-index: 2;
+	z-index: 3;
 	font-size: 1.3rem;
 	font-weight: 550;
 	text-transform: uppercase;
 	color:#FF8D0C;
-
-	position: absolute;
-	display: flex;
-	transform: translate(150%, 50%);
+	/* transform: translate(150%, 50%); */
+	text-align: center; 
+	margin: 0 auto;
+	margin-top: 16px;
+	padding-top: 10px;
 }
 
 .toggler{
 	position: absolute;
 	top: 0.5rem;
-	margin-left: 1300%;
-	left: 28rem;
-	width: 60px;
-	height: 60px;
+	/* margin-left: 1300%; */
+	/* left: 25rem; */
+	width: 50px;
+	height: 50px;
 	z-index: 3;
 	opacity: 0;
 	cursor: pointer;
-	
+	left: 37px;
 }
 
 .hamburger{
 	opacity: 50%;
-	position: absolute;
-	top: 0.5rem;
-	left: 28rem;
-	width: 60px;
-	height: 60px;
+	position: fixed;
+	top: 0.7rem;
+	margin-left: auto;
+	/* left: 25rem; */
+	width: 50px;
+	height: 50px;
 	z-index: 2;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	left: 37px;
 }
 
 .hamburger>div{
 	position: absolute;
 	width: 60%;
-	height: 3px;
+	height: 3.2px;
 	border-radius: 1.5px;
 	background-color: black;
 	transition: .4s;
-
+	
 }
 
 .hamburger>div:before{
@@ -102,7 +105,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 103%;
 	/* visibility: hidden; */
 	transition: .6s;
 }
@@ -112,8 +115,9 @@
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-150%);
-    width: 475px;
+    width: 97%;
     height: 500px;
+	margin: 0 auto;
     border-radius: 111px;
     background-color: rgba(255, 255, 255, 0.9);
     display: flex;
@@ -127,27 +131,24 @@
 	max-width: 90vw;
 	max-height: 100vh;
 	opacity: 0;
-	transition: .6s;
+	transition: 0.33s;
 	align-self: flex-end;
 	margin-bottom: 1rem;
 }
 
-.menu > div > div > ul > li{
-	list-style: none;
-}
 
-.menu > div > div > ul > li > a{
+
+.submenu{
 	text-decoration: none;
 	color: #002A7F;
 	font-weight: 550;
 	text-transform: uppercase;
-	margin: .5rem;
-	transition: .3s;
 	font-size: 1.2rem;
+	transition: 3;
 	display: inline-block;
 }
 
-.menu > div > div > ul > li > a:hover{
+.submenu:hover{
 	color: #FF8D0C;
 }
 
