--- a/css/style2.css
+++ b/css/style2.css
@@ -38,6 +38,7 @@ body{
 	position: relative;
     max-width: 700px;
     padding: 2rem;
+	margin: 0 auto;
     z-index: 1;
 }
 
@@ -53,7 +54,7 @@ body{
 	color: white;
 	font-size: 16px;
 	font-weight: 100;
-	margin:0;
+	margin: 0 auto;
 }
 
 .btn{
