--- a/css/table.css
+++ b/css/table.css
@@ -6,7 +6,7 @@
 
 .table-box
 {
-    margin: 50px auto;
+    margin: 0 auto;
 }
 
 .table-row{
@@ -16,12 +16,10 @@
     font-family: sans-serif;
     background: #FF8D0C;
     border-radius: 17px;
-    /* padding: 12px 0; */
     color: rgb(255, 255, 255);
     font-size: 13px;
     box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-    /* text-align: center;
-    justify-content: center; */
+
 }
 
 .table-head{
@@ -43,11 +41,11 @@
     display: table-cell;
     width: 20%;
     text-align: center;
-    /* padding: 4px 0; */
-    /* border-right: 1px solid #d6d4d4; */
+    padding: 4px 0;
     vertical-align: middle;
     font-weight: 500;
-    padding-top:4%;
+    transform: translateY(18%);
+    
 }
 
 .first-cell{
