--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@
     margin: 0;
     padding: 0;
     outline: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #082A77;
 }
+
 
 body {
     height: 100vh;
@@ -11,9 +13,6 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background: linear-gradient(white 5.71%, #00246D 85.71%, #002A7F 120%);
-    /* background-color: #082A77; */
-
 } 
 
 .container{
@@ -22,6 +21,9 @@ body {
     top: 50%;
     transform: translate(-50%,-50%);
     padding: 20px 25px;
+
+    background-color: #082A77;
+    /* box-shadow: 0 0 10px rgba(255,255,255,.3); */
 }
 
 
@@ -34,20 +36,16 @@ body {
 }
 */
 
-
-
 /* -------- Input Field -------- */
 .container form input{
     width: calc(100% - 20px);
     padding: 8px 10px;
-    margin:auto;
     margin-bottom: 15px;
     border: none;
     background-color: transparent;
     border-bottom: 2px solid #ffffff;
     /* color: #fff; */
     font-size: 20px;
-    outline: none;
 }
 
 .container form input:after{
@@ -59,42 +57,20 @@ body {
     border-bottom: 2px solid #ffffff;
     /* color: #fff; */
     font-size: 20px;
-    outline: none;
 }
 
-.container form input:focus{
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid #ffffff;
-}
-
-/* -------- Placeholder -------- */
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: red;
-    opacity: 1; /* Firefox */
-}
-  
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: red;
-}
-  
-::-ms-input-placeholder { /* Microsoft Edge */
-    color: red;
-}
 
 /* -------- Button -------- */
 .container form button{
-    width : 70%;
-    height: 40px;
+    width : 25%;
     text-align: center;
     position: relative;
     padding: 5px 0;
     border: none;
     border-radius: 30px;
     background-color: #FF8D0C;
-    font-size: 14px;
+    font-size: 18px;
     color: #ffffff;
-    text-transform: uppercase;
     
 } 
 
@@ -124,3 +100,7 @@ body {
     right: 0;
 }
 
+/* ------------------ */
+.inline {
+    
+}
