--- a/css/menu.css
+++ b/css/menu.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	top: 0;
 	/* left: 50%; */
-	/* z-index: 1; */
+	z-index: 2;
 	
 	/* display: inline;
     justify-content: center;
