--- a/css/style2.css
+++ b/css/style2.css
@@ -29,8 +29,8 @@ body{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #002A7F;
-	/* background-color: transparent; */
+	/* background-color: #ffffff; */
+	background-color: transparent;
 
 }
 
