--- a/css/location.css
+++ b/css/location.css
@@ -129,6 +129,12 @@ ul li a:hover {
     color: #002A7F;
 }
 
+/*-------------------------*/
+.selectOffice {
+    /* display: none; */
+    background-color: #002A7F;
+}
+
 .mainBottom {
     bottom: 0px;
     position: fixed;
