--- a/css/menu.css
+++ b/css/menu.css
@@ -105,7 +105,8 @@ h2{
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 103%;
+	min-height: 500px;
+	height: 90%;
 	/* visibility: hidden; */
 	transition: .6s;
 	/* transform: translateZ(0); */
