--- a/css/selection.css
+++ b/css/selection.css
@@ -1,179 +1,264 @@
-/* body {
-  background: transparent;
-  font-family: 'Poppins', sans-serif;
+@import 'https://fonts.googleapis.com/css?family=Roboto:100,300';
+ @import 'https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.3.2/css/simple-line-icons.min.css';
+ @import 'https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css';
+ @import 'https://fonts.googleapis.com/css?family=Roboto+Mono:300,700';
+
+ h1 {
+	 text-align: center;
+	 color: #fff;
+	 font-weight: 600;
+	 font-size: 3em;
+	 letter-spacing: 0px;
+	 text-shadow: 1px 1px rgba(0, 0, 0, 0.02), 2px 2px rgba(0, 0, 0, 0.02), 3px 3px rgba(0, 0, 0, 0.02), 4px 4px rgba(0, 0, 0, 0.02), 5px 5px rgba(0, 0, 0, 0.02), 6px 6px rgba(0, 0, 0, 0.02), 7px 7px rgba(0, 0, 0, 0.02);
 }
-
-.center {
-  position: absolute;
-  display: inline-block;
-  top: 50%; left: 50%;
-  transform: translate(-50%, -50%);
+ h1 i {
+	 position: relative;
+	 font-size: 70px;
 }
-
-.menu-container input{
-    visibility: hidden;
+ /* p {
+	 text-align: center;
+	 color: #fff;
+	 font-size: 14px;
+	 margin-bottom: 2em;
+	 line-height: 30px;
+} */
+ /* p img {
+	 position: relative;
+	 top: 8px;
+	 right: 10px;
+} */
+ .select {
+	 position: relative;
+	 overflow: hidden;
+	 display: block;
+	 margin: auto;
+	 width: 330px;
+	 height: 100%;
+	 border-bottom: 0px;
+	 border-radius: 3px;
+	 font-size: 12px;
+	 box-shadow: 0px 1em 2em -1.5em rgba(0, 0, 0, .5);
 }
-/** Custom Select **/
-/* .custom-select-wrapper {
-  position: relative;
-  display: inline-block;
-  user-select: none;
+ .select > i.toggle {
+	 position: absolute;
+	 z-index: 4;
+	 right: 1.5em;
+	 top: 1.6em;
+	 color: #ccc;
 }
-
-.custom-select-wrapper select {
-    display: none;
+ .select .title, .select .placeholder {
+	 position: relative;
+	 display: block;
+	 width: 100%;
+	 height: 100%;
+	 padding: 1.5em 2em;
+	 background: rgba(255, 255, 255, 1);
+	 border-top: 1px solid rgba(0, 0, 0, .05);
+	 cursor: pointer;
 }
-  
-.custom-select {
-    position: relative;
-    display: inline-block;
-    top: 65px;
-    display: block;
-    background: #FF8D0C; 
-    width: 100%;
-    border-radius: 5px;
+ .select > input {
+	 position: absolute;
+	 left: 0px;
+	 top: 0px;
+	 z-index: 1;
+	 width: 100%;
+	 height: 100%;
+	 display: block;
+	 opacity: 0;
+	 cursor: pointer;
 }
-    
-.custom-select-trigger {
-      position: relative;
-      display: block;
-      width: 130px;
-      padding: 0 84px 0 22px;
-      font-size: 22px;
-      font-weight: 300;
-      line-height: 60px;
-      padding: 8px 20px;
-      border-bottom: 1px solid;
-      background-color: #FF8D0C;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-      
-    .custom-select-trigger:after {
-        position: absolute;
-        display: block;
-        content: '';
-        width: 10px; height: 10px;
-        top: 50%; right: 25px;
-        margin-top: -3px;
-        /* border-bottom: 1px solid #fff;
-        border-right: 1px solid #fff; */
-        /* transform: rotate(45deg) translateY(-50%);
-        transition: all .4s ease-in-out;
-        transform-origin: 50% 0;
-      }
-
-      .custom-select.opened .custom-select-trigger:after {
-        margin-top: 3px;
-        transform: rotate(-135deg) translateY(-50%);
-      } */
-
-  /* .custom-options {
-    position: absolute;
-    display: block;
-    top: 100%; left: 0; right: 0;
-    min-width: 100%;
-    margin: 15px 0;
-    border: 1px solid #b5b5b5;
-    border-radius: 4px;
-    box-sizing: border-box;
-    box-shadow: 0 2px 1px rgba(0,0,0,.07);
-    background: red;
-    transition: all .4s ease-in-out;
-    
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transform: translateY(-15px);
-  }
-
-  .custom-select.opened .custom-options {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: all;
-    transform: translateY(0);
-  }
-
-  .custom-options:before {
-    position: absolute;
-    display: block;
-    content: '';
-    bottom: 100%; right: 25px;
-    width: 7px; height: 7px;
-    margin-bottom: -4px;
-    border-top: 1px solid #b5b5b5;
-    border-left: 1px solid #b5b5b5;
-    background: yellow;
-    transform: rotate(45deg);
-    transition: all .4s ease-in-out;
-  }
-
-    .option-hover:before {
-      background: transparent;
-    }
-    .custom-option {
-      position: relative;
-      display: block;
-      padding: 0 22px;
-      border-bottom: 1px solid #b5b5b5;
-      font-size: 25px;
-      font-weight: 600;
-      color: #b5b5b5;
-      line-height: 47px;
-      cursor: pointer;
-      transition: all .4s ease-in-out;
-    }
-    .custom-option:first-of-type {
-      border-radius: 4px 4px 0 0;
-    }
-    .custom-option:last-of-type {
-      border-bottom: 0;
-      border-radius: 0 0 5px 5px;
-    }
-    .custom-option:hover,
-    .custom-option.selection {
-      background: black;
-    }  */
-
-/*----------------*/
-.menu-container {
-    z-index: 1;
-    position: absolute;
-    top: 12%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+ .select > input:checked ~ i.toggle.icon-arrow-down {
+	 display: none;
 }
-
-
-.selectOffice {
-    text-transform: uppercase;
-    position: relative;
-    background: #FF8D0C;
-    color: white;
-    font-size: 20px;
-    padding: 8px 20px;
-    width: 150px;
-    line-height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: width .4s;
-    overflow: auto;
+ .select > input:checked ~ i.toggle.icon-arrow-up {
+	 display: block;
 }
-
-.selectOffice:active {
-    background-color: white;
-    box-shadow: none;
-    border: #FF8D0C;
-    color: #FF8D0C;
+ .select > input:checked div.options label.option .title {
+	 display: none !important;
 }
-
-input {
-    visibility: hidden;
+ .select > input:not(:checked) {
+	 z-index: 4;
 }
+ .select > input:not(:checked) ~ label.option > span.title {
+	 display: none;
+}
+ .select > input:not(:checked) ~ i.toggle.icon-arrow-up {
+	 display: none;
+}
+ .select > input:not(:checked) ~ i.toggle.icon-arrow-down {
+	 display: block;
+}
+ .select > input:disabled {
+	 cursor: no-drop;
+}
+ .select > span.placeholder {
+	 position: relative;
+	 z-index: 0;
+	 display: inline-block;
+	 width: 100%;
+	 color: #999;
+	 border-top: 0px;
+	 border-radius: 25px;
+}
+ .select label.option {
+	 display: block;
+	 overflow: hidden;
+	 z-index: 1;
+	 width: 100%;
+	 transition: all 1s ease-out;
+}
+ .select label.option span.title {
+	 position: relative;
+	 z-index: 2;
+	 transition: background 0.3s ease-out;
+}
+ .select label.option span.title i.icon {
+	 padding-right: 8px;
+	 color: rgba(146, 168, 209, 1);
+}
+ .select label.option span.title:hover {
+	 color: #fff;
+	 /* color: #002A7F; */
+	 background: rgb(41, 102, 227);
+	 box-shadow: inset 0px 1px 0px rgba(0, 0, 0, .1);
+}
+ .select label.option input {
+	 display: none;
+}
+ .select label.option input:checked ~ span.title {
+	 position: absolute;
+	 display: block;
+	 z-index: 3;
+	 top: 0px;
+	 font-size: 12px;
+	 background: #fff;
+	 border-top: 0px;
+	 box-shadow: none;
+	 color: inherit;
+	 width: 100%;
+	 border-radius: 25px;
+}
+ /* .select label.option input:disabled ~ span.title {
+	 background: #f9f9f9 !important;
+	 color: #aaa;
+}
+ .select label.option input:disabled ~ span.title:hover {
+	 color: #aaa;
+	 background: none;
+	 cursor: no-drop;
+} */
+ .select2 { 
+	 position: relative;
+	 overflow: hidden;
+	 display: block;
+	 margin: auto;
+	 width: 330px;
+	 height: 100%;
+	 border-bottom: 0px;
+	 border-radius: 3px;
+	 font-size: 12px;
+	 box-shadow: 0px 1em 2em -1.5em rgba(0, 0, 0, .5);
+}
+ .select2 i.toggle {
+	 position: absolute;
+	 z-index: 4;
+	 right: 1.5em;
+	 top: 1.6em;
+	 color: #ccc;
+}
+ .select2 .title, .select2 .placeholder {
+	 position: relative;
+	 display: block;
+	 width: 100%;
+	 height: 100%;
+	 padding: 1.5em 2em;
+	 background: rgba(255, 255, 255, 1);
+	 border-top: 1px solid rgba(0, 0, 0, .05);
+	 cursor: pointer;
+}
+ .select2 > label > input {
+	 position: absolute;
+	 left: 0px;
+	 top: 0px;
+	 z-index: 2;
+	 width: 100%;
+	 height: 100%;
+	 display: block;
+	 opacity: 0;
+	 cursor: pointer;
+}
+ .select2 > label > input:checked {
+	 z-index: 2;
+}
+ .select2 > label > input:checked ~ i.toggle.icon-plus {
+	 display: none;
+}
+ .select2 > label > input:checked ~ i.toggle.icon-minus {
+	 display: block;
+}
+ .select2 > label > input:not(:checked) ~ i.toggle.icon-minus {
+	 display: none;
+}
+ .select2 > label > input:not(:checked) ~ i.toggle.icon-plus {
+	 display: block;
+}
+ .select2 > label > input:not(:checked) ~ label.option input:not(:checked) ~ .title {
+	 display: none !important;
+}
+ .select2 > label > input:disabled {
+	 cursor: no-drop;
+}
+ .select2 label > span.placeholder {
+	 position: relative;
+	 z-index: 0;
+	 display: inline-block;
+	 width: 100%;
+	 color: #999;
+	 border-top: 0px;
+}
+ .select2 label.option {
+	 display: block;
+	 overflow: hidden;
+	 z-index: 1;
+	 width: 100%;
+	 transition: all 1s ease-out;
+}
+ .select2 label.option span.title {
+	 position: relative;
+	 z-index: 2;
+	 transition: background 0.3s ease-out;
+}
+ .select2 label.option span.title i.icon {
+	 padding-right: 8px;
+	 color: rgba(146, 168, 209, 1);
+}
+ .select2 label.option span.title:hover {
+	 color: #fff;
+	 background: rgba(146, 168, 209, .5);
+	 box-shadow: inset 0px 1px 0px rgba(0, 0, 0, .1);
+}
+ .select2 label.option input {
+	 display: none;
+}
+ .select2 label.option input:checked ~ span.title {
+	 position: absolute;
+	 display: block;
+	 z-index: 1;
+	 top: 0px;
+	 font-size: 12px;
+	 background: #fff;
+	 border-top: 0px;
+	 box-shadow: none;
+	 color: inherit;
+	 width: 100%;
+}
+ /* .select2 label.option input:disabled ~ span.title {
+	 background: #f9f9f9 !important;
+	 color: #aaa;
+}
+ .select2 label.option input:disabled ~ span.title:hover {
+	 color: #aaa;
+	 background: none;
+	 cursor: no-drop;
+}
+  */
