--- a/css/location.css
+++ b/css/location.css
@@ -20,7 +20,7 @@ body {
     position: absolute;
     top: 12%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%);
     width: 300px;
     display: flex;
     align-items: center;
